# Algorithmic-Trading-model1

./: CMakeLists.txt  LICENSE  README.md  generate_market_data.py
01_infrastructure_provisioning/colocation_docs/: CME_Aurora_Inquiry_Draft.md
01_infrastructure_provisioning/hardware_specs/: nic_spec_v1.toml  server_spec_v1.toml  switch_spec_v1.toml
02_data_plane/book_builder/: CMakeLists.txt  main.cpp
02_data_plane/market_data_handler/: CMakeLists.txt  main.cpp
03_execution_plane/order_manager/: CMakeLists.txt  main.cpp
03_execution_plane/strategy_framework/: strategy_base.h
04_risk_control_plane/compliance_logger/: CMakeLists.txt  main.cpp
04_risk_control_plane/pre_trade_risk/: CMakeLists.txt  main.cpp
05_research_environment/backtester/: main.py
05_research_environment/data_storage/: storage_interface.py
analytics/: analytics_engine.py
dashboard/: app.py
dashboard/backend/: app.py
dashboard/frontend/static/: app.js  style.css
dashboard/frontend/templates/: index.html
dashboard/static/: app.js  style.css
dashboard/templates/: index.html
risk_management/: risk_manager.py
